tests/ui/specialization/issue-38091-2.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091-2.rs:4:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete
   = note: `#[warn(incomplete_features)]` on by default

error[E0275]: overflow evaluating the requirement `i32: Check`
   |
note: required for `i32` to implement `Iterate<'_>`
  --> $DIR/issue-38091-2.rs:11:13
   |
LL | impl<'a, T> Iterate<'a> for T
   |             ^^^^^^^^^^^     ^
LL | where
LL |     T: Check,
   |        ----- unsatisfied trait bound introduced here

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0275`.
